--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 image: /img/gallery/IMG_2071.jpg
 ---
 <!-- Start Hero -->
-<div class="hero" style="background: url('{{ site.baseurl }}/img/{{ site.hero.hero_img }}') no-repeat; background-size: cover; height: 20rem;">
+<div class="hero" style="background: url('{{ site.baseurl }}/img/{{ site.hero.hero_img }}') no-repeat center; background-size: cover; height: 50vh;">
 </div>
 <!-- End Hero -->
 
