Update program.html - modify for summer 2024 concert

--- a/program.html
+++ b/program.html
@@ -4,6 +4,6 @@ permalink: /program
 <html>
     <head></head>
     <body>
-        <img src="img/performers.jpg" />
+        <img src="img/PSW_Summer_2024_Program.png" />
     </body>
 </html>
